Add lacp fallback delay for inband ztp port-channels

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-vrf.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-vrf.cfg
@@ -30,6 +30,7 @@ interface Port-Channel21
    switchport
    switchport trunk allowed vlan 101
    switchport mode trunk
+   port-channel lacp fallback timeout 30
    port-channel lacp fallback individual
 !
 interface Port-Channel22
@@ -38,6 +39,7 @@ interface Port-Channel22
    switchport
    switchport trunk allowed vlan 102
    switchport mode trunk
+   port-channel lacp fallback timeout 90
    port-channel lacp fallback individual
 !
 interface Port-Channel23
