--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent.yml
@@ -112,6 +112,7 @@ port_channel_interfaces:
   mode: trunk
   vlans: '101'
   lacp_fallback_mode: individual
+  lacp_fallback_timeout: 30
 - name: Port-Channel22
   description: INBAND-MGMT-SUBNET-VRF_Po1
   type: switched
@@ -119,6 +120,7 @@ port_channel_interfaces:
   mode: trunk
   vlans: '102'
   lacp_fallback_mode: individual
+  lacp_fallback_timeout: 90
 - name: Port-Channel23
   description: INBAND-MGMT-IP_Po1
   type: switched
