--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7255,6 +7255,17 @@ $defs:
               node.'
             type: bool
             default: false
+          inband_ztp_lacp_fallback_delay:
+            documentation_options:
+              table: node-type-inband-management-configuration
+            description: 'Set the LACP fallback timeout of the upstream device''s
+              port-channel towards the downstream inband ZTP node.
+
+              This setting also requires that inband_ztp is set for the node.'
+            type: int
+            min: 0
+            max: 300
+            default: 30
           inband_management_subnet:
             documentation_options:
               table: node-type-inband-management-configuration
