Updated dual stack/ipv6 test cases

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack1.cfg
@@ -49,6 +49,8 @@ interface Port-Channel24
    switchport
    switchport trunk allowed vlan 104
    switchport mode trunk
+   port-channel lacp fallback timeout 30
+   port-channel lacp fallback individual
    mlag 24
 !
 interface Port-Channel25
@@ -112,6 +114,8 @@ interface Ethernet20
 interface Ethernet24
    description INBAND-MGMT-DUALSTACK-SUBNETS_Ethernet1
    no shutdown
+   switchport access vlan 104
+   switchport mode access
    channel-group 24 mode active
 !
 interface Ethernet25
