--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-ipv6-1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-ipv6-1.cfg
@@ -43,6 +43,8 @@ interface Port-Channel26
    switchport
    switchport trunk allowed vlan 106
    switchport mode trunk
+   port-channel lacp fallback timeout 30
+   port-channel lacp fallback individual
    mlag 26
 !
 interface Port-Channel27
@@ -51,6 +53,8 @@ interface Port-Channel27
    switchport
    switchport trunk allowed vlan 107
    switchport mode trunk
+   port-channel lacp fallback timeout 30
+   port-channel lacp fallback individual
    mlag 27
 !
 interface Ethernet11
@@ -106,11 +110,15 @@ interface Ethernet20
 interface Ethernet26
    description INBAND-MGMT-IPV6-ONLY_Ethernet1
    no shutdown
+   switchport access vlan 106
+   switchport mode access
    channel-group 26 mode active
 !
 interface Ethernet27
    description INBAND-MGMT-IPV6-ONLY-VRF_Ethernet1
    no shutdown
+   switchport access vlan 107
+   switchport mode access
    channel-group 27 mode active
 !
 interface Loopback0
