--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-dualstack1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-dualstack1.yml
@@ -179,6 +179,8 @@ port_channel_interfaces:
   mode: trunk
   vlans: '104'
   mlag: 24
+  lacp_fallback_mode: individual
+  lacp_fallback_timeout: 30
 - name: Port-Channel25
   description: INBAND-MGMT-DUALSTACK-IPS_Po1
   type: switched
@@ -297,6 +299,8 @@ ethernet_interfaces:
   channel_group:
     id: 24
     mode: active
+  mode: access
+  vlans: 104
 - name: Ethernet25
   peer: inband-mgmt-dualstack-ips
   peer_interface: Ethernet1
