Feat(eos_cli_config_gen): Add eos_cli support under router_isis

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis.cfg
@@ -122,5 +122,11 @@ router isis EVPN_UNDERLAY
    !
    segment-routing mpls
       no shutdown
+   address-family ipv6 unicast
+     multi-topology
+   traffic-engineering
+     no shutdown
+     is-type level-2
+
 !
 end
