--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
@@ -34,6 +34,12 @@ router_isis:
       mode: sha
       sha:
         key_id: 2
+  eos_cli: |
+    address-family ipv6 unicast
+      multi-topology
+    traffic-engineering
+      no shutdown
+      is-type level-2
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
