--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_isis.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_isis.schema.yml
@@ -376,3 +376,6 @@ keys:
                 min: 5
                 max: 300
                 description: Level-2 LSP database sync wait time in seconds.
+      eos_cli:
+        type: str
+        description: Multiline EOS CLI rendered directly on the router isis in the final EOS configuration.
