--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12587,6 +12587,10 @@ keys:
                 min: 5
                 max: 300
                 description: Level-2 LSP database sync wait time in seconds.
+      eos_cli:
+        type: str
+        description: Multiline EOS CLI rendered directly on the router isis in the
+          final EOS configuration.
   router_l2_vpn:
     type: dict
     keys:
