Feat(eos_designs): Add Vxlan1 VRF VNI for WAN VRFs on Pathfinders

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.cfg
@@ -179,6 +179,8 @@ interface Vxlan1
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
+   vxlan vrf IT vni 14
+   vxlan vrf PROD vni 42
 !
 application traffic recognition
    !
