--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -272,7 +272,11 @@ interface Vxlan1
    description cv-pathfinder-pathfinder_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
+   vxlan vrf ATTRACTED-VRF-FROM-UPLINK vni 166
    vxlan vrf default vni 1
+   vxlan vrf IT vni 100
+   vxlan vrf PROD vni 42
+   vxlan vrf TRANSIT vni 66
 !
 application traffic recognition
    !
