Feat(eos_cli_config_gen): Add router internet-exit

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -143,6 +143,7 @@ router-path-selection
 router-pim-sparse-mode
 router-service-insertion
 router-igmp
+router-internet-exit
 service-routing-configuration-bgp
 service-routing-protocols-model
 service-routing-protocols-model-2
