Refactor: Remove ip_address and use public_ip under wan_route_servers.interfaces

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/autovpn-edge-no-default-policy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/autovpn-edge-no-default-policy.yml
@@ -20,7 +20,7 @@ wan_route_servers:
       - name: INET
         interfaces:
           - name: Ethernet1
-            ip_address: 10.7.7.7
+            public_ip: 10.7.7.7
 
 wan_ipsec_profiles:
   control_plane:
