--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3808,6 +3808,15 @@ keys:
                       type: str
                       description: The public IPv4 address (without mask) of the Route
                         Reflector for this path-group.
+                      deprecation:
+                        warning: true
+                        new_key: public_ip
+                        removed: true
+                        remove_in_version: 4.7.0
+                    public_ip:
+                      type: str
+                      description: The public IPv4 address (without mask) of the Route
+                        Reflector for this path-group.
   wan_stun_dtls_disable:
     type: bool
     documentation_options:
