Feat(eos_designs): public_ip input field support for devices behind NAT (#3652)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
@@ -21,7 +21,7 @@ wan_route_servers:
       - name: INET
         interfaces:
           - name: Ethernet1
-            ip_address: 10.7.7.7/31
+            public_ip: 10.7.7.7
   - hostname: autovpn-rr2
 
 wan_ipsec_profiles:
