--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -221,6 +221,7 @@ wan_rr:
           static_routes:
             - prefix: 0.0.0.0/0
           ip_address: 10.7.7.7/31
+          public_ip: 172.17.7.7
           peer_ip: 10.7.7.6
         - name: Ethernet2
           wan_carrier: Colt
@@ -250,6 +251,10 @@ wan_rr:
           wan_carrier: ATT-MPLS
           wan_circuit_id: 10999
           ip_address: 172.19.9.9/31
+          # public IP here will be overriden by
+          # wan_route_servers.path_groups.interfaces.ip_address
+          # in CV_PATHFINDER_MULTI_RR_TESTS groups vars.
+          public_ip: 10.37.37.7
 
 wan_path_groups:
   - name: MPLS
