--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3806,8 +3806,17 @@ keys:
                       description: Interface name.
                     ip_address:
                       type: str
-                      description: The public IP address of the Route Reflector for
-                        this path-group.
+                      description: The public IPv4 address (without mask) of the Route
+                        Reflector for this path-group.
+                      deprecation:
+                        warning: true
+                        new_key: public_ip
+                        removed: true
+                        remove_in_version: 4.7.0
+                    public_ip:
+                      type: str
+                      description: The public IPv4 address (without mask) of the Route
+                        Reflector for this path-group.
   wan_stun_dtls_disable:
     type: bool
     documentation_options:
@@ -8021,6 +8030,14 @@ $defs:
 
             This is not rendered in the configuration but can be used in ACLs in certain
             scenarios.'
+        public_ip:
+          type: str
+          description: "Node IPv4 address (no mask).\n\nThis is used to get the public
+            IP (if known) when the device is behind NAT.\nThis is only used for `wan_rr`
+            routers (AutoVPN RRs and Pathfinders) to determine the Public IP\nwith
+            the following preference:\n  `wan_route_servers.path_groups.interfaces.ip_address`\n
+            \     -> `l3_interfaces.public_ip`\n          -> `l3_interfaces.ip_address`\n\nThe
+            determined Public IP is used by WAN routers when peering with this interface."
         encapsulation_dot1q_vlan:
           description: For subinterfaces the dot1q vlan is derived from the interface
             name by default, but can also be specified.
