Refactor: Add iBGP EVPN Gateway for WAN HA

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -385,13 +385,13 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
-   description Allow prefixes originated from the HA peer
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes originated from the HA peer
    match extcommunity ECL-EVPN-SOO
    set as-path match all replacement auto auto
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Use WAN routes from HA peer as backup
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 30
+   description Deny WAN routes from HA peer
    match as-path ASPATH-WAN
    set community no-advertise
 !
@@ -429,6 +429,10 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.2:423 additive
 !
+route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
+   description Set lower Local Preference for EVPN routes received from WAN HA peer
+   set local-preference 50
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -452,6 +456,16 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 172.17.0.5 description cv-pathfinder-edge2A
+   neighbor 172.17.0.5 route-reflector-client
+   neighbor 172.17.0.5 update-source Dps1
+   neighbor 172.17.0.5 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 172.17.0.5 send-community
+   neighbor 172.17.0.7 description cv-pathfinder-edge2A
+   neighbor 172.17.0.7 route-reflector-client
+   neighbor 172.17.0.7 update-source Dps1
+   neighbor 172.17.0.7 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 172.17.0.7 send-community
    neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.8 remote-as 65199
    neighbor 172.17.0.8 description site-ha-enabled-leaf2A_Ethernet2
@@ -466,6 +480,9 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
+      neighbor 172.17.0.5 activate
+      neighbor 172.17.0.7 activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
