--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3A.cfg
@@ -3,13 +3,13 @@
 agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
 !
 flow tracking hardware
-   tracker WAN-FLOW-TRACKER
+   tracker FLOW-TRACKER
       record export on inactive timeout 70000
-      record export on interval 5000
-      exporter DPI-EXPORTER
+      record export on interval 300000
+      exporter CV-TELEMETRY
          collector 127.0.0.1
          local interface Loopback0
-         template interval 5000
+         template interval 3600000
    no shutdown
 !
 service routing protocols model multi-agent
@@ -102,7 +102,7 @@ router path-selection
       !
       peer static router-ip 192.168.144.1
          name cv-pathfinder-pathfinder
-         ipv4 address 10.7.7.7
+         ipv4 address 172.17.7.7
          ipv4 address 10.9.9.9
    !
    path-group LAN_HA id 65535
@@ -189,14 +189,14 @@ ip security
 interface Dps1
    description DPS Interface
    mtu 9214
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 192.168.142.6/32
 !
 interface Ethernet1
    description ATT_404-01
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
 !
@@ -204,7 +204,7 @@ interface Ethernet52
    description LAN HA OMG
    no shutdown
    no switchport
-   ip address 10.10.10.0
+   ip address 10.10.10.0/31
 !
 interface Loopback0
    description Router_ID
@@ -273,22 +273,22 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
 ip prefix-list PL-WAN-HA-PEER-PREFIXES
-   seq 10 permit 10.10.10.1/32
+   seq 10 permit 10.10.10.0/31
 !
 ip prefix-list PL-WAN-HA-PREFIXES
-   seq 10 permit 10.10.10.0/32
+   seq 10 permit 10.10.10.0/31
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
-   description Allow prefixes originated from the HA peer
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes originated from the HA peer
    match extcommunity ECL-EVPN-SOO
    set as-path match all replacement auto auto
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Use WAN routes from HA peer as backup
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 30
+   description Deny WAN routes from HA peer
    match as-path ASPATH-WAN
    set community no-advertise
 !
@@ -326,6 +326,10 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.6:404 additive
 !
+route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
+   description Set lower Local Preference for EVPN routes received from WAN HA peer
+   set local-preference 50
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -349,6 +353,11 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.10.10.1 description cv-pathfinder-edge3B
+   neighbor 10.10.10.1 route-reflector-client
+   neighbor 10.10.10.1 update-source Dps1
+   neighbor 10.10.10.1 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 10.10.10.1 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -357,6 +366,8 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
+      neighbor 10.10.10.1 activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
@@ -412,7 +423,7 @@ management security
 stun
    client
       server-profile INET-cv-pathfinder-pathfinder-Ethernet1
-         ip address 10.7.7.7
+         ip address 172.17.7.7
          ssl profile profileA
       server-profile INET-cv-pathfinder-pathfinder-Ethernet3
          ip address 10.9.9.9
