--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -3,13 +3,13 @@
 agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
 !
 flow tracking hardware
-   tracker WAN-FLOW-TRACKER
+   tracker FLOW-TRACKER
       record export on inactive timeout 70000
-      record export on interval 5000
-      exporter DPI-EXPORTER
+      record export on interval 300000
+      exporter CV-TELEMETRY
          collector 127.0.0.1
          local interface Loopback0
-         template interval 5000
+         template interval 3600000
    no shutdown
 !
 service routing protocols model multi-agent
@@ -51,6 +51,9 @@ router adaptive-virtual-topology
       match application-profile VIDEO
          avt profile PROD-AVT-POLICY-VIDEO
       !
+      match application-profile MPLS-ONLY
+         avt profile PROD-AVT-POLICY-MPLS-ONLY
+      !
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
@@ -65,6 +68,9 @@ router adaptive-virtual-topology
    !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
+   !
+   profile PROD-AVT-POLICY-MPLS-ONLY
+      path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
@@ -88,6 +94,7 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
+      avt profile PROD-AVT-POLICY-MPLS-ONLY id 5
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -128,6 +135,10 @@ router path-selection
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
       path-group LAN_HA
       path-group MPLS priority 2
+   !
+   load-balance policy LB-PROD-AVT-POLICY-MPLS-ONLY
+      path-group LAN_HA
+      path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
       loss-rate 42.0
@@ -189,21 +200,21 @@ ip security
 interface Dps1
    description DPS Interface
    mtu 9214
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 192.168.142.7/32
 !
 interface Ethernet2
    description Colt_10423
    no shutdown
    no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
+   flow tracker hardware FLOW-TRACKER
    ip address 172.15.6.6/31
 !
 interface Ethernet52
    description LAN HA OMG
    no shutdown
    no switchport
-   ip address 10.10.10.1
+   ip address 10.10.10.1/31
 !
 interface Loopback0
    description Router_ID
@@ -237,6 +248,8 @@ application traffic recognition
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
+   !
+   application-profile MPLS-ONLY
    !
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
@@ -272,22 +285,22 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
 ip prefix-list PL-WAN-HA-PEER-PREFIXES
-   seq 10 permit 10.10.10.0/32
+   seq 10 permit 10.10.10.0/31
 !
 ip prefix-list PL-WAN-HA-PREFIXES
-   seq 10 permit 10.10.10.1/32
+   seq 10 permit 10.10.10.0/31
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
-   description Allow prefixes originated from the HA peer
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes originated from the HA peer
    match extcommunity ECL-EVPN-SOO
    set as-path match all replacement auto auto
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Use WAN routes from HA peer as backup
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 30
+   description Deny WAN routes from HA peer
    match as-path ASPATH-WAN
    set community no-advertise
 !
@@ -325,6 +338,10 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.6:404 additive
 !
+route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
+   description Set lower Local Preference for EVPN routes received from WAN HA peer
+   set local-preference 50
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -348,6 +365,11 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.10.10.0 description cv-pathfinder-edge3A
+   neighbor 10.10.10.0 route-reflector-client
+   neighbor 10.10.10.0 update-source Dps1
+   neighbor 10.10.10.0 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 10.10.10.0 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -356,6 +378,8 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
+      neighbor 10.10.10.0 activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
