--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -373,13 +373,13 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
-   description Allow prefixes originated from the HA peer
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes originated from the HA peer
    match extcommunity ECL-EVPN-SOO
    set as-path match all replacement auto auto
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Use WAN routes from HA peer as backup
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 30
+   description Deny WAN routes from HA peer
    match as-path ASPATH-WAN
    set community no-advertise
 !
@@ -417,6 +417,10 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.2:423 additive
 !
+route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
+   description Set lower Local Preference for EVPN routes received from WAN HA peer
+   set local-preference 50
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -446,6 +450,16 @@ router bgp 65000
    neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.6 remote-as 65199
    neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1
+   neighbor 172.17.0.9 description cv-pathfinder-edge2B
+   neighbor 172.17.0.9 route-reflector-client
+   neighbor 172.17.0.9 update-source Dps1
+   neighbor 172.17.0.9 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 172.17.0.9 send-community
+   neighbor 172.17.0.11 description cv-pathfinder-edge2B
+   neighbor 172.17.0.11 route-reflector-client
+   neighbor 172.17.0.11 update-source Dps1
+   neighbor 172.17.0.11 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 172.17.0.11 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -454,6 +468,9 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
+      neighbor 172.17.0.9 activate
+      neighbor 172.17.0.11 activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
