--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -412,13 +412,13 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
-   description Allow prefixes originated from the HA peer
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny prefixes originated from the HA peer
    match extcommunity ECL-EVPN-SOO
    set as-path match all replacement auto auto
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Use WAN routes from HA peer as backup
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 30
+   description Deny WAN routes from HA peer
    match as-path ASPATH-WAN
    set community no-advertise
 !
@@ -456,6 +456,10 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.43.1:422 additive
 !
+route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
+   description Set lower Local Preference for EVPN routes received from WAN HA peer
+   set local-preference 50
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -479,6 +483,11 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 172.17.0.1 description cv-pathfinder-transit1A
+   neighbor 172.17.0.1 route-reflector-client
+   neighbor 172.17.0.1 update-source Dps1
+   neighbor 172.17.0.1 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 172.17.0.1 send-community
    neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.2 remote-as 65199
    neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2
@@ -490,6 +499,8 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
+      neighbor 172.17.0.1 activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
