--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12337,9 +12337,13 @@ keys:
               - iif
   router_internet_exit:
     type: dict
+    description: Internet-exit feature provides internet bound service offered in
+      an AVT to the traffic going outside the enterprise towards the internet.
     keys:
       policies:
         type: list
+        description: Internet-exit policy represent a policy which can be attached
+          to an AVT profile that needs to be applied to the traffic matching the AVT.
         primary_key: name
         items:
           type: dict
@@ -12348,6 +12352,9 @@ keys:
               type: str
             exit_groups:
               type: list
+              description: The exit groups that are configured under a policy are
+                strictly ordered, meaning an exit group appearing first has more priority
+                than the exit group that follows it.
               primary_key: name
               items:
                 type: dict
@@ -12356,10 +12363,18 @@ keys:
                     type: str
                   after:
                     type: str
+                    description: Insert the previous exit group AFTER the following
+                      exit group.
                   before:
                     type: str
+                    description: Insert the previous exit group BEFORE the following
+                      exit group.
       exit_groups:
         type: list
+        description: 'Exit groups represent a group of exit options (connections).
+
+          Traffic flows are load balanced in a round robin fashion across all the
+          members (exits) of the exit-group.'
         primary_key: name
         items:
           type: dict
@@ -12368,8 +12383,15 @@ keys:
               type: str
             fib_default:
               type: bool
+              description: Fib default exit indicates that the flows that select this
+                exit will follow the default route available in the VRF of the flow.
             locals:
               type: list
+              description: 'Local connection refers to a connection configured under
+                the service-insertion CLI mode.
+
+                The service-insertion module reports the health of the connection
+                and the exit will qualify for use only when it is healthy.'
               items:
                 type: dict
                 keys:
